--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^19.2.1",
     "react": "^19.2.1",
     "lucide-react": "^0.556.0",
+    "xlsx": "0.18.5",
     "@google/genai": "^1.31.0"
   },
   "devDependencies": {
