--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^19.2.1",
     "lucide-react": "^0.556.0",
     "xlsx": "0.18.5",
-    "@google/genai": "^1.31.0"
+    "@google/genai": "^1.31.0",
+    "html-to-image": "1.11.11"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
